refactor: updates